compiler/testData/diagnostics/nativeTests/dynamic.kt
// FIR_IDENTICAL

fun test(a: <!UNSUPPORTED!>dynamic<!>) = a
